Name:     digestive-functors-haste
Version:  0.7.0.0
Synopsis: A practical formlet library

Description:
    Digestive functors is a library inspired by formlets:

    .

    <http://groups.inf.ed.ac.uk/links/formlets/>

    .

    It is intended to be an improvement of the Haskell formlets library, with as
    main advantages:

    .

    * better error handling, so a web page can display input errors right next
      to the corresponding fields;

    .

    * the ability to easily add @\<label\>@ elements;

    .

    * separation of the validation model and the HTML output.

    .

    Tutorial:
    <http://github.com/jaspervdj/digestive-functors/blob/master/examples/tutorial.lhs>

Homepage:      http://github.com/jaspervdj/digestive-functors
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.8

Flag haste-inst {
    Description: The package is built using haste-inst
    Default: False
}

Library
  Hs-source-dirs: src
  Ghc-options:    -Wall -fwarn-tabs

  Exposed-modules:
    Text.Digestive
    Text.Digestive.Form
    Text.Digestive.Form.Encoding
    Text.Digestive.Form.List
    Text.Digestive.Ref
    Text.Digestive.Types
    Text.Digestive.Util
    Text.Digestive.View
    Text.Digestive.Form.Internal
    Text.Digestive.Form.Internal.Field

  Build-depends:
    base       >= 4       && < 5,
    containers >= 0.3     && < 0.6,
    mtl        >= 1.1.0.0 && < 3,
    string-compat
